20220517:
 * Changed CM_PATH_LIST to +PATH
 * Added general support for +ENV that is expanded to ENV=val1;val2;...:${ENV}

20220511:
 * Added prototype of ic::prototype-get-ml-model-resnet50-onnx with variations
 * Added prototype of ic::prototype-get-imagenet-val with variations
 * Added prototype of ic::prototype-get-imagenet-aux with variations
 * Added prototype of ic::prototype-get-llvm
 * Added prototype of ic::prototype-get-tvm



