@@ -1,6 +1,0 @@
-echo.
-echo %CM_TEST1%
-echo %CM_TEST2%
-
-echo.
-echo HELLO WORLD!
