@@ -1,5 +1,5 @@
 {
-  "alias": "prototype-echo-hello-world-py",
+  "alias": "prototype-print-hello-world-py",
   "automation_alias": "ic",
   "automation_uid": "972c28dafb2543fa",
   "deps": [
@@ -21,7 +21,9 @@
   ],
   "tags": [
     "prototype",
+    "print",
     "hello world",
+    "hello-world",
     "hello",
     "world",
     "python"
