@@ -1,0 +1,6 @@
+echo.
+echo CM_ENV_TEST1 = %CM_ENV_TEST1%
+echo CM_ENV_TEST2 = %CM_ENV_TEST2%
+
+echo.
+echo HELLO WORLD!
