@@ -1,3 +1,6 @@
+20220525:
+ * Fixing basic IC to print hello world
+
 20220517:
  * Changed CM_PATH_LIST to +PATH
  * Added general support for +ENV that is expanded to ENV=val1;val2;...:${ENV}
